:bug: bug: erro no treino classificador

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = 'web-page-phishing-detection-dataset/dataset_phishing.csv'\n"
+    "dataset = 'web-page-phishing-detection-dataset/dataset_phishing.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,19 +433,19 @@
        "[11430 rows x 89 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv (dataset)\n",
-    "data"
+    "df = pd.read_csv (dataset)   #df = dataframe\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -818,18 +818,18 @@
        "[11430 rows x 89 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.isnull()"
+    "df.isnull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
     }
    ],
    "source": [
-    "data.info()"
+    "df.info()"
    ]
   },
   {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -965,18 +965,15 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "#import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "# Carregar o arquivo CSV para data\n",
-    "data = pd.read_csv(dataset)\n",
-    "\n",
     "# Conta o número de linhas duplicadas no\n",
-    "num_duplicados = data.duplicated().sum()\n",
+    "num_duplicados = df.duplicated().sum()\n",
     "\n",
     "# Calcula o número total de linhas no DataFrame\n",
-    "num_total_linhas = data.shape[0]\n",
+    "num_total_linhas = df.shape[0]\n",
     "\n",
     "# Calcular o número de linhas únicas (excluindo duplicatas)\n",
     "num_linhas_unicas = num_total_linhas - num_duplicados\n",
@@ -997,10 +994,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "legitimate    5715\n",
+       "phishing      5715\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converter os rótulos 'legitimate' para 0 e 'phishing' para 1\n",
+    "mapping = {'legitimate':0, 'phishing':1}\n",
+    "df['status'] = df['status'].map(mapping)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "0    5715\n",
+       "1    5715\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['status'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%pip install scikit-learn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import svm\n",
+    "\n",
+    "X, y = df.drop(columns=['status']), df['status']\n",
+    "# X = possui possui todas as columanas menos a 'status' \n",
+    "#y= contém a coluna 'status'\n",
+    "\n",
+    "X.shape, y.shape\n",
+    "# Exibir as dimensões do DataFrame\n",
+    "\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=0)\n",
+    "# retem 40% do dados para avaliar o classificador \n",
+    "\n",
+    "X_train.shape, y_train.shape\n",
+    "X_test.shape, y_test.shape\n",
+    "\n",
+    "clf = svm.SVC(kernel='linear', C=1).fit(X_train, y_train)\n",
+    "clf.score(X_test, y_test)\n"
+   ]
   }
  ],
  "metadata": {
