--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "[11430 rows x 89 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "[88 rows x 88 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "Name: status, Length: 88, dtype: float64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
        " 'status']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2809,6 +2809,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2893,6 +2900,35 @@
    "source": [
     "accuracy_df = pd.DataFrame(list(accuracy_scores.items()), columns=['Model', 'Accuracy Score'])\n",
     "accuracy_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classificador KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:95%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "kn = KNeighborsClassifier()\n",
+    "kn.fit(X_train_scaled,y_train)\n",
+    "kn_predict = kn.predict(X_test_scaled)\n",
+    "accuracy = accuracy_score(y_test , kn_predict)\n",
+    "print(\"Accuracy:{}%\".format(round(accuracy *100), 1))"
    ]
   }
  ],
